flex/flex-tests/testData/js2_highlighting/ValidateClassAndPackageName.js2
package <error>aaa</error> {
  public class <error>XXX</error> {}
  public class <error descr="More than one externally visible symbol defined in file">ValidateClassAndPackageName</error> {}
}